[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprite/mama.png" type="Texture" id=1]
[ext_resource path="res://Script/Mama.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15.5 )

[node name="Mama" type="Area2D"]
script = ExtResource( 2 )

[node name="MamaSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Mama_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
